--- a/capitulos/Evaluacion.tex
+++ b/capitulos/Evaluacion.tex
@@ -6,7 +6,7 @@
 \fancyhead[RE]{\textsc{CAPÍTULO} \thechapter. Evaluación}
 \label{ch:Evaluacion}
 
-\noindent En el siguiente capítulo se presentan los procedimientos de evaluación así como los resultados de los experimentos realizados. Además, se realiza una comparativa y discusión de los distintos resultados obtenidos. Para evaluar el sistema propuesto, se definen dos experimentos según el procedimiento aplicado para realizar la evaluación del sistema. En el primero, se reservan una parte de los datos para realizar una búsqueda de los hiperparámetros óptimos para cada algoritmo de clasificación mientras que en el segundo se emplean los parámetros por defecto para evitar el sobreajuste. Con estos experimentos, se pretende evaluar el rendimiento del sistema propuesto para detección del machismo en redes sociales. Asimismo, se evaluará el efecto que tiene en el sistema el desbalanceo existente en la clase del conjunto de datos.
+\noindent En el siguiente capítulo se presentan los procedimientos de evaluación así como los resultados de los experimentos realizados. Además, se realiza una comparativa y discusión de los distintos resultados obtenidos. Para evaluar el sistema propuesto, se definen dos experimentos según el procedimiento aplicado para realizar la evaluación del sistema. En el primero, se reserva una parte de los datos para realizar una búsqueda de los hiperparámetros óptimos para cada algoritmo de clasificación mientras que en el segundo se emplean los parámetros por defecto para evitar el sobreajuste. Con estos experimentos, se pretende evaluar el rendimiento del sistema propuesto para detección del machismo en redes sociales. Asimismo, se evaluará el efecto que tiene en el sistema el desbalanceo existente en la clase del conjunto de datos.
 
 \section{Metodología de evaluación}
 \label{sec:Met_Eval}
@@ -21,31 +21,31 @@
 	\captionof{figure}{Matriz de confusión}	
 \end{center}
 
-Esta tabla está formada por verdaderos positivos, verdaderos negativos, falsos positivos y falsos negativos. De este modo, si un documento es clasificado por el sistema automático en la misma categoría que la clasificación manual, se considerará como un verdadero positivo o negativo (\textit{True Positive}, TP o \textit{True Negative}, TN), mientras que si el documento es clasificado por el sistema con una categoría diferente, se estará ante un falso negativo o falso positivo (\textit{False Positive}, FP o \textit{False Negative}, FN).Utilizando estos cuatro componentes se calculan las medidas principales para evaluar los resultados:
+Esta tabla está formada por verdaderos positivos, verdaderos negativos, falsos positivos y falsos negativos. De este modo, si un documento es clasificado por el sistema automático en la misma categoría que la clasificación real (manual), se considerará como un verdadero positivo o negativo (\textit{True Positive}, TP o \textit{True Negative}, TN), mientras que si el documento es clasificado por el sistema con una categoría diferente, se estará ante un falso negativo o falso positivo (\textit{False Positive}, FP o \textit{False Negative}, FN).Utilizando estos cuatro componentes se calculan las medidas principales para evaluar los resultados:
 
 \begin{itemize}
 	\itemsep0em 
 	\item Tasa de acierto o exactitud (\textit{accuracy}): representa el porcentaje de aciertos en relación a todos los documentos clasificados.
 	\[\textit{Accuracy}=\frac{TP+TN}{TP+FP+TN+FN}\]
-	\item Precisión: representa la fracción de asignaciones correctas frente al total de asignaciones positivas realizadas para esa clase. Es decir, realiza una medida de la tasa de acierto para un valor de la clase.
+	\item Precisión (precision): representa la fracción de asignaciones correctas frente al total de asignaciones positivas realizadas para esa clase. Es decir, realiza una medida de la tasa de acierto para un valor de la clase.
 	\[Precision=\frac{TP}{TP+FP}\]
 	\item Cobertura (\textit{recall}): representa la fracción de asignaciones positivas respecto al conjunto real de elementos pertenecientes a la clase. Es decir, realiza una medida de la capacidad que tiene el clasificador de detectar elementos de esa clase.
 	\[Cobertura=\frac{TP}{TP+FN}\]
 	\item Medida-F: combina las medidas de precision y cobertura.
-	\[Medida-F=\frac{2xprecisionxcobertura}{precision+cobertura}\]
+	\[Medida-F=\frac{2*precision*cobertura}{precision+cobertura}\]
 \end{itemize}
 
 
 \subsection{Colección de evaluación}
 \label{sec:Col_Eval}
 
-\noindent Las colecciones de evaluación son conjuntos de datos etiquetados con información relevante para la tarea para la cual han sido desarrollados. En este caso, las colecciones de evaluación para clasificación de documentos están compuestas por textos, ya sean oraciones, párrafos o documentos completos, de distinta naturaleza y que están etiquetados con categorías concretas. Por ejemplo, para el presente trabajo, existen tres valores posibles para esta categoría: ``MACHISTA'', ``NO\_MACHISTA'' y ``DUDOSO''.
+\noindent Las colecciones de evaluación son conjuntos de datos etiquetados, principalmente de forma manual, con información relevante para la tarea para la cual han sido desarrollados. En este caso, las colecciones de evaluación para clasificación de documentos están compuestas por textos, ya sean oraciones, párrafos o documentos completos, de distinta naturaleza y que están etiquetados con categorías concretas. Por ejemplo, para el presente trabajo, existen tres valores posibles para esta categoría: ``MACHISTA'', ``NO\_MACHISTA'' y ``DUDOSO''.
 
 Estos conjuntos de evaluación permiten intuir el rendimiento de los sistemas de clasificación y compararlo con el de otros sistemas. Asimismo, en los sistemas de clasificación supervisados, son clave para poder ser entrenados utilizando un subconjunto de la colección.
 
-Para el presente trabajo, se utilizará como conjunto de evaluación del sistema de clasificación de contenido machista el corpus presentado en el capítulo 4. Se trata de un corpus compuesto por 3600 tweets recopilados mediante el uso de expresiones que pueden conllevar actitudes machistas. 
+Para el presente trabajo, se utilizará como conjunto de evaluación del sistema de clasificación de contenido machista el corpus MeTwo presentado en el capítulo 4. Se trata de un corpus compuesto por 3600 tweets recopilados mediante el uso de expresiones que pueden conllevar actitudes machistas. 
 
-Para recuperar esta información se utilizaron los siguientes términos: ``feminazi", ``loca del", ``a la cocina", zorra, ``como una niña", ``las feministas", niñata, ``como una mujer", ``en tus días", ``a fregar", mojigata, marimacho, nenaza, ``para ser mujer", ``odio a las mujeres", lagartona, ``A las mujeres hay que", ``las mujeres no deberían", ``las mujeres de hoy en día", ``mujer al volante", ``mujer tenías que ser", ``mucho feminismo pero", ``pareces una puta", ``para ser chica". De este modo, se recopilaron todos los mensajes escritos en la red social que contuvieran estos términos durante las fechas 1/07/2018 - 31/12/2018.
+Para recuperar esta información se utilizaron los siguientes términos: ``feminazi", ``loca del", ``a la cocina", ``zorra'', ``como una niña", ``las feministas", ``niñata'', ``como una mujer", ``en tus días", ``a fregar", ``mojigata'', ``marimacho'', ``nenaza'', ``para ser mujer", ``odio a las mujeres", ``lagartona'', ``A las mujeres hay que", ``las mujeres no deberían", ``las mujeres de hoy en día", ``mujer al volante", ``mujer tenías que ser", ``mucho feminismo pero", ``pareces una puta", ``para ser chica". De este modo, se recopilaron todos los mensajes escritos en la red social que contuvieran estos términos durante las fechas 1/07/2018 - 31/12/2018.
 
 El propósito principal de este corpus es la obtención de texto con alto contenido machista así como expresiones que, aún pudiendo ser machistas, no lo sean en ese contexto. De este modo, se pretende obtener un conjunto rico en el uso de expresiones que pueden conllevar actitudes machistas en diferentes contextos.
 
@@ -98,11 +98,11 @@ Este método permite evaluar un sistema más general cuyos parámetros de configura
 \section{Resultados experimento 1}
 \label{sec:Metric_Eval}
 
-La tabla 6.1 muestra los resultados promedio de exactitud (\textit{Accuracy}), medida F1, cobertura (\textit{Recall}) y precisión. Con el método de evaluación descrito para el primer experimento, el algoritmo \textit{Random Forest} alcanza una mayor tasa de acierto y precisión, mientras que la regresión logística alcanza los mejores resultados para la medida F1 y \textit{recall}. 
+La tabla 6.1 muestra los resultados promedio de exactitud (\textit{Accuracy}), medida F1, cobertura (\textit{Recall}) y precisión (precision). Con el método de evaluación descrito para el primer experimento, el algoritmo \textit{Random Forest} alcanza una mayor tasa de acierto y precisión, mientras que la regresión logística alcanza los mejores resultados para la medida F1 y \textit{recall}. 
 
 En relación a la comparación de los resultados obtenidos por el método con las dos líneas base, en este caso las diferencias con respecto a la aproximación basada en unigramas son de unos cuatro puntos porcentuales para cada medida. Por tanto, el sistema mejora esta primera aproximación en todas las medidas pero, como se preveía, la línea base ya es un buen punto de partida del sistema.
 
-En el caso de la línea base basada en el clasificador sencillo de la clase mayoritaria, sí se pueden observar grandes diferencias en las métricas de calidad. Esto indica que cualquiera de las soluciones propuestas será mucho más adecuada que un clasificador basado en una única regla sencilla.
+En el caso de la línea base basada en el clasificador sencillo de la clase mayoritaria, sí se pueden observar grandes diferencias en las métricas de calidad. Esto se produce porque, una solución basada en un sistema informativo, aprenderá todos los valores de la clase, mientras que un sistema no informativo solo indicará una clase como su salida. De este modo, que cualquiera de las soluciones será mucho más adecuada que un clasificador basado en una única regla sencilla.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
@@ -123,7 +123,7 @@ En el caso de la línea base basada en el clasificador sencillo de la clase mayor
 
 Los resultados presentados en la tabla 6.1 muestran que el sistema de clasificación desarrollado en el presente trabajo se comporta mejor que las lineas base en todas las métricas de calidad. Estos buenos resultados parecen confirmar la hipótesis de que cualquier modelo utilizando todos los atributos disponibles en el corpus resulta más apropiado que solo el uso del texto disponible para cada registro.
 
-En concreto, la diferencia entre el mejor de los clasificadores del método propuesto y la línea base basada en unigramas es de 4\%. Esta diferencia se debe principalmente a la información que aportan los atributos numéricos y categóricos para la tarea del clasificación. Esto se confirma en la figura 4.9, donde se puede observar como la longitud del tweet y el número de \textit{retweets} tienen influencia en la clasificación. Se puede intuir como en el caso de los tweets dudosos, la longitud media es mucho menor que en el caso de los machistas y no machistas. Además, los tweets dudosos no presentan gran cantidad de \textit{retweets} si se comparan con el resto de clases. Es por esto, que utilizar estos atributos en el sistema de clasificación aporta información útil y permite mejorar los resultados.
+En concreto, la diferencia entre el mejor de los clasificadores del método propuesto y la línea base basada en unigramas es de 4\% para la tasa de acierto. Esta diferencia se debe principalmente a la información que aportan los atributos numéricos y categóricos para la tarea del clasificación. Esto se confirma en la figura 4.9, donde se puede observar como la longitud del tweet y el número de \textit{retweets} tienen influencia en la clasificación. Se puede intuir como en el caso de los tweets dudosos, la longitud media es mucho menor que en el caso de los machistas y no machistas. Además, los tweets dudosos no presentan gran cantidad de \textit{retweets} si se comparan con el resto de clases. Es por esto, que utilizar estos atributos en el sistema de clasificación aporta información útil y permite mejorar los resultados.
 
 Esta hipótesis se reafirma con los resultados de la figura 6.4. En esta figura, se observan los valores SHAP (\textit{SHapley Additive exPlanations}) \cite{shap} para los tweets dudosos. Esta técnicas permite desglosar cada predicción individualmente para mostrar el impacto que tiene cada atributo en la clasificación. El primer atributo (\textit{display\_text\_width}) coincide con la longitud del tweet, y se confirma que, a menor valor en este atributo (menor longitud del tweet), más probable es que el sistema clasifique el texto como dudoso. Cabe destacar otros atributos como los términos ``nenaza'' y ``feminazi'' en los que se observa que la presencia de estos términos reduce la probabilidad de que el sistema clasifique el tweet como dudoso. Esto se debe a que la existencia de estos términos en los tweets se han asociado con comportamientos machistas durante el proceso de etiquetado, como se puede puede observar en las figuras 6.5 y 6.6. Otro atributo interesante que provocó inconvenientes durante el proceso de etiquetado manual del corpus es la existencia del término ``lagartona''. En este caso, la existencia de este término provoca que aumente la probabilidad de que el tweet sea dudoso, esto ocurre por la ambigüedad de la palabra que puede hacer referencia a una persona que vende su cuerpo a cambio de dinero o a una persona pícara. Esta confusión provoca que, si existe el término en un mensaje, aumente la probabilidad de ser dudoso. Otro término que ha provocado confusión durante el etiquetado ha sido ``niñata''. Como se puede observar en la figura 6.6, la existencia de este término aumenta la probabilidad de que el tweet sea no machista pues, por sí solo, este término no conlleva una actitud machista. A pesar de esto, se trata de un término que, según el contexto en el que sea empleado, podría ser considerado machista.
 
@@ -156,9 +156,9 @@ La tabla 6.1 muestra también ligeras diferencias entre los resultados obtenidos 
 
 A priori, cabía esperar mejores resultados para el clasificador SVM pues ha sido aplicado de un modo exitoso en referencias previas para clasificación textual \cite{Canos2018,Wahyu2018}. Este tipo de algoritmo suele funcionar mejor que otros como los árboles de decisión en problemas donde las matrices de datos son muy ``dispersas'' y el concepto de distancia entre los diferentes puntos adquiere mayor importancia, como ocurre al realizar la representación de texto mediante los atributos tf-idf. Sin embargo, en este problema en particular, solo se trabajan con 222 atributos en total antes de aplicar el algoritmo de clasificación, esto podría provocar que este tipo de técnica deje de tener la efectividad esperada.
 
-En cuanto a los resultados obtenidos con el algoritmo RF, es importante señalar que se han conseguido unos valores elevados en la tasa de acierto y en precisión debido a la gran capacidad de la técnica para detectar los tweets no machistas. Esto se puede confirmar mediante la matriz de confusión representada en la tabla 6.2, donde se observa que el valor de clase ``NO\_MACHISTA'' es claramente el que mejor se clasifica mediante esta técnica. 
+En cuanto a los resultados obtenidos con el algoritmo RF, es importante señalar que se han conseguido unos valores elevados en la tasa de acierto y en precisión debido a la capacidad del método para detectar los tweets no machistas. Esto se puede confirmar mediante la matriz de confusión representada en la tabla 6.2, donde se observa que el valor de clase ``NO\_MACHISTA'' es claramente el que mejor se clasifica mediante esta técnica. 
 
-La elevada precisión del algoritmo RF para los tweets no machistas se debe al efecto del desbalanceo de la clase. Como ya se introdujo en los capítulos anteriores, y debido a la naturaleza del problema, existe una gran predominancia de los tweets no machistas en el corpus etiquetado manualmente. Esto provoca que algoritmos como los árboles de decisión, puedan tener un sesgo en sus predicciones hacia la clase predominante \cite{Liu}. Otro tipo de técnicas como SVM pueden alcanzar mejores rendimientos en este tipo de problemas \cite{Ustuner2016}. Pese a esto, RF no se aleja demasiado en otras métricas como F1 por el uso conjunto de numerosos árboles de decisión, que permite mejorar el rendimiento que se obtendría con un único árbol de decisión.
+La elevada precisión del algoritmo RF para los tweets no machistas se debe al efecto del desbalanceo de la clase. Como ya se introdujo en los capítulos anteriores, y debido a la naturaleza del problema, existe una gran predominancia de los tweets no machistas en el corpus etiquetado manualmente. Esto provoca que algoritmos como los árboles de decisión, puedan tener un sesgo en sus predicciones hacia la clase predominante \cite{Liu}. Otro tipo de técnicas como SVM pueden alcanzar un mejor equilibrio en sus resultados para este tipo de problemas \cite{Ustuner2016}. Pese a esto, RF no se aleja demasiado en otras métricas como F1 por el uso conjunto de numerosos árboles de decisión, que permite mejorar el rendimiento que se obtendría con un único árbol de decisión.
 
 %%
 % Se puede mejorar la explicación: mostrar la estructura de los árboles y obtener importancia de atributos
